add test & refactor architecture